tests/expectations/parser/functions/const_public_param_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'const'
    --> test:4:24
     |
   4 |     function x(x: u32, const public y: i32) {
     |                        ^^^^^"""]
